# agentic-authorization

./: .gitignore  README.md  pyproject.toml  requirements.txt
agentic_auth/: __init__.py  auth_service.py  caching.py  gateway.py  model.fga  models.py  scope_inference.py  utils.py
examples/: __init__.py  example_tools.py  example_usage.py
