[project]
name = "agentic-authorization"
version = "0.1.0"
description = "Authorization patterns for autonomous AI agent systems using ReBAC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openfga-sdk>=0.3.0",
    "anthropic>=0.34.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

